--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,7 @@ android:
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-18
+jdk:
+ - oraclejdk8
 before_install:
  - chmod +x gradlew
