--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-18
+    # - sys-img-armeabi-v7a-android-18
 jdk:
  - oraclejdk8
 before_install:
