--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ android:
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     # - sys-img-armeabi-v7a-android-18
+env:
+  global:
+   # install timeout in minutes (2 minutes by default)
+    - ADB_INSTALL_TIMEOUT=8
 jdk:
  - oraclejdk8
 before_install:
@@ -30,3 +34,6 @@ before_script:
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell input keyevent 82 &
+script:
+  - android list target
+  - ./gradlew connectedAndroidTest
